@@ -1,10 +1,12 @@
 Form Generator
 ===================
 
-Данное поведение помогает генерировать формы при помощи CFrom из моделей.
-Нужно создать метод getFormElements(), который возвращает массив элементов для формы.
-Можно использовать сценарии!
+Данное поведение помогает генерировать формы при помощи [CForm](http://www.yiiframework.com/doc/api/CForm), используя информацию из модели.
+Поведение получает элементы выполнив метод CModel::getFormElements(), в указанной модели.
+Метод возвращает массив элементов, который используется в [CForm::setElements()](http://www.yiiframework.com/doc/api/CForm#setElements-detail).
+Поддерживаются сценарии модели.
 
+Пример модели:
 ~~~
 [php]
 class User extends CActiveRecord
@@ -20,12 +22,11 @@ class User extends CActiveRecord
 	}
 }
 ~~~
-Модель готова.
 
 Подключаем поведение к контроллеру и в действии генерируем форму
 ~~~
 [php]
-class UsersController extends Controller
+class UsersController extends CController
 {
 	public function behaviors()
 	{
@@ -35,11 +36,7 @@ class UsersController extends Controller
 				// Настройки формы
 				'config'=>array(
 					'attributes'=>array(
-						'class'=>'feedback',
-					),
-					'activeForm'=>array(
-						'id'=>'feedback-form',
-					),
+						'class'=>'user_form',
 				),
 			)
 		);
@@ -47,7 +44,8 @@ class UsersController extends Controller
 	public function actionInsert()
 	{
 		$form=$this->formGenerator;
-		$form->setModel(new User('insert'));
+		$form->setModel(new User);
+		// Добавляем дополнительную форму, например каптчу,
 		$form->addModel(new CaptchaModel);
 		$this->render('user_form');
 	}
@@ -55,16 +53,19 @@ class UsersController extends Controller
 	{
 		$form=$this->formGenerator;
 		$form->setModel(new User('update'));
+		// Добавляем дополнительную форму, например каптчу,
 		$form->addModel(new CaptchaModel);
 		$this->render('user_form');
 	}
 }
 ~~~
 
-В представлении рендерим форму
+Теперь все готово. Осталось только в представлении нарисовать форму
 ~~~
 [php]
 echo CHtml::openTag('div',array('id'=>'user_form','class'=>'user_form'));
 echo $this->form;
 echo CHtml::closeTag('div');
 ~~~
+
+Для большей информации о настройки элементов, пожалуйста прочитайте [CFormInputElement](http://www.yiiframework.com/doc/api/CFormInputElement).
